@@ -70,6 +70,19 @@ Give an overview of the options.
 Don't honor .nobackup files. Normally if such files are found the directory is not
 printed to standard output, now it is.
 .TP
+.B \-a
+Read the uid and gid information from the file's extended attributes:
+\'r_uid' and 'r_gid'. This option only works if \fBrdup\fR was built with
+xattr support.
+
+This option is usefull when restoring a remote backup. Normally these
+backups are transferred by a non-root user. This user will not be able
+to correctly set all uid/gid information. As a workaround rdup's scripts
+will set the extended attributes for the file to store the original
+uid/gid. With this option \fBrdup\fR will re-insert these original
+uid/gid in its output.
+
+.TP
 .B \-c
 Print the files' contents to standard output. This sets
 the FORMAT string to: "%p%m %u %g %l %s\\n%n%C";
