@@ -3,7 +3,8 @@ xx May 2006: 0.2.11 Miek <miek@miek.nl
    * scripts: implemented sanity checks on the
      data received. If there is any inconsistency
      the script quits
-
+   * -a flag: read extended attributes to restore uid/gid 
+     (usefull for remote backups)
 
 01 May 2006: 0.2.10 Miek <miek@miek.nl>
   -- tiny bugfixes + major restore updates --
